--- a/.impact/project.json
+++ b/.impact/project.json
@@ -1,7 +1,12 @@
 {
   "name": "Industrialcontrolsystems",
   "format": "1.0.0",
-  "dependencies": [],
+  "dependencies": [
+    {
+      "name": "Modelica",
+      "versionSpecifier": "4.0.0"
+    }
+  ],
   "content": [
     {
       "relpath": "IndustrialControlSystems",
